--- a/cadastrar.html
+++ b/cadastrar.html
@@ -74,7 +74,7 @@
 
 
                                 <div class="text-center p-t-136" id="mover">
-                                    <a class="txt2" href="login.html">
+                                    <a class="txt2" href="index.html">
                                         Voltar para login
                                         <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                                     </a>
